--- a/client/src/page-home/page-home.html
+++ b/client/src/page-home/page-home.html
@@ -29,7 +29,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
 
         color: white;
         background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-                          url('../../images/topo02.jpg');
+                          url('../../images/topo02-min.JPG');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
