--- a/client/src/page-home/page-home.html
+++ b/client/src/page-home/page-home.html
@@ -167,7 +167,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
 
     <div id="transformedContent">
       <header>
-        <h1>TopoDesign - Topografía, Geodesia e Ingeniería</h1>
+        <h1>TopoDesIng - Topografía, Geodesia e Ingeniería</h1>
         <h2>Nos especializamos en servicios de ingeniería geodesia y topografía, elaboración de proyectos, supervisión en los campos de edificación, habilitaciones urbanas, etc. dirigido a sectores y entidades privadas.</h2>
       </header>
 
@@ -185,11 +185,13 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
           <h3>SERVICIOS</h3>
           <div class="section-columns">
             <div class="section-description">
-              TOPOGRAFIA
-              DISEÑO DE INGENIERÍA
-              ESTUDIO DE SUELOS
-              GEODESIA
-              URBANISMO
+              <ul style="list-style-type: square;">
+              <li><strong><span style="color: #000000;">TOPOGRAFIA</span></strong></li>
+              <li><strong><span style="color: #000000;">DISE&Ntilde;O DE INGENIER&Iacute;A</span></strong></li>
+              <li><strong><span style="color: #000000;">ESTUDIO DE SUELOS</span></strong></li>
+              <li><strong><span style="color: #000000;">GEODESIA</span></strong></li>
+              <li><strong><span style="color: #000000;">URBANISMO</span></strong></li>
+              </ul>
             </div>
           </div>
         </div>
