--- a/client/src/app-styles.html
+++ b/client/src/app-styles.html
@@ -38,6 +38,44 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
 
         font-size: 1.1em;
       }
+      @media (max-width: 600px) {
+                .smallhide {
+                    display: none;
+                }
+            }
+
+            .fancy {
+                font-family: 'Pacifico', cursive;
+            }
+
+            .card {
+                margin: 16px 24px 24px 24px;
+                padding: 16px;
+                box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+                border-radius: 5px;
+                background-color: #fff;
+                color: #757575;
+            }
+
+            iron-grid div, p, ul {
+                width: 100%;
+            }
+
+            iron-grid p, ul {
+                margin: 8px 0;
+            }
+
+            a {
+                color: #008;
+            }
+
+            img.center {
+                display: block;
+                margin: 0 auto;
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
     </style>
   </template>
 </dom-module>
